--- a/ShapesAndroid/app/src/main/AndroidManifest.xml
+++ b/ShapesAndroid/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -23,16 +22,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shapes"
         tools:targetApi="31">
+
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!-- Add RegisterActivity declaration -->
+        <activity
+            android:name=".ui.register.RegisterActivity"
+            android:exported="true" />
+
+    </application>
 
 </manifest>
