--- a/ShapesAndroid/app/src/main/AndroidManifest.xml
+++ b/ShapesAndroid/app/src/main/AndroidManifest.xml
@@ -32,10 +32,14 @@
             </intent-filter>
         </activity>
 
-        <!-- Add RegisterActivity declaration -->
         <activity
             android:name=".ui.register.RegisterActivity"
             android:exported="true" />
+
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true" />
+
 
     </application>
 
