--- a/ShapesAndroid/app/src/main/AndroidManifest.xml
+++ b/ShapesAndroid/app/src/main/AndroidManifest.xml
@@ -38,6 +38,17 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true" />
+        <activity
+            android:name=".ui.setting.SettingActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.profile.ProfileActivity"
+            android:exported="true" />
+
+
+        <activity
+            android:name=".ui.logout.LogoutActivity"
+            android:exported="true" />
 
 
 
